--- a/acercade.html
+++ b/acercade.html
@@ -22,9 +22,8 @@
     <main>
         <section>
             <h2>Acerca de mí</h2>
-            <p>Mi nombre es Julio Martinez. Estoy curzando la carrera Tecnicatura en Desarrollo Web en la Universidad Nacional del Comahue.
-               Tengo 47 años y me dedico a la reparacion de equipos informaticos desde los 17 años al principio como hoby , hoy es mi fuente de ingresos
-               .</p>
+            <p>Soy estudiante de informática en la Universidad Nacional del Comahue (UNCO). Me apasiona la tecnología y el desarrollo de software.</p>
+            <p>En esta página comparto mis proyectos, ideas y algunos datos personales relacionados con mi trayectoria académica y profesional.</p>
             <img src="./img/foto.jpg" alt="Foto de Nombre Apellido" width="300">
         </section>
     </main>
