--- a/contacto.html
+++ b/contacto.html
@@ -133,7 +133,14 @@
                         <td>Código Postal</td>
                         <td></td>
                     </tr>
-                   
+                    <tr>
+                        <td>Método preferido de contacto</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>Tipo de suscripción</td>
+                        <td></td>
+                    </tr>
                 </table>
             </div>
         </section>
