--- a/acercade.html
+++ b/acercade.html
@@ -27,12 +27,27 @@
             <p>Soy estudiante de informática en la Universidad Nacional del Comahue (UNCO). Me apasiona la tecnología y el desarrollo de software.</p>
             <p>En esta página comparto mis proyectos, ideas y algunos datos personales relacionados con mi trayectoria académica y profesional.</p>
             <img src="./img/foto.jpg" alt="Foto de Julio Martinez" width="300">
+            
         </section>
+
+        <div class="resume-summary">
+            <p>Currículum: Soy un programador con experiencia en diversas tecnologías y proyectos de software...</p>
+            <!-- Contenido completo oculto al inicio -->
+            <div id="full-content" class="hidden">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.</p>
+                <p>Fusce ac felis sit amet ligula pharetra condimentum. Donec vel sapien augue integer. Mauris risus eros, fringilla eu feugiat vitae, malesuada sit amet odio. Suspendisse potenti.</p>
+                <p>Etiam imperdiet imperdiet orci. Nunc nec neque. Phasellus leo dolor, tempus non, auctor et, hendrerit quis, nisi.</p>
+            </div>
+            <button onclick="toggleContent()" id="read-more-btn">Leer más</button>
+        </div>
+
+        
     </main>
 
     <footer>
         <p>&copy;- 2024 Martinez Informatica - UNCO - Dirección: Monseñor Esandi y Ricardo Balbín, Viedma, Río Negro</p>
     </footer>
     <a href="#top" class="flecha-arriba">Arriba</a>
+    <script src="script.js"></script>
 </body>
 </html> 
