--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         <section>
             <h2>Bienvenidos a mi página personal</h2>
             <p>En esta página encontrarás información sobre mí y mis proyectos.</p>
+            <section class="image-center">
+                <img src="./img/Gabino.jpg" alt="Comic de Gabino" id="comicImage">
+            </section>
         </section>
     </main>
     
