--- a/acercade.html
+++ b/acercade.html
@@ -31,7 +31,7 @@
         </section>
 
         <div class="resume-summary">
-            <p>Currículum: Soy un programador con experiencia en diversas tecnologías y proyectos de software...</p>
+            <p>Currículum: Soy un programador Junior con experiencia en diversas tecnologías y proyectos de software...</p>
             <!-- Contenido completo oculto al inicio -->
             <div id="full-content" class="hidden">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.</p>
